Fixing double border in tables

--- a/app/assets/stylesheets/provider/_info_box.scss
+++ b/app/assets/stylesheets/provider/_info_box.scss
@@ -1,6 +1,4 @@
 .InfoBox {
-  border-radius: $border-radius;
-  border: $border-width solid $border-color;
   display: block;
   margin: line-height-times(1/2) 0;
   padding: line-height-times(1);
