--- a/app/assets/stylesheets/provider/_tables.scss
+++ b/app/assets/stylesheets/provider/_tables.scss
@@ -178,7 +178,9 @@ table.list {
   }
 }
 
-
+table.mini {
+  border: line-height-times(1) solid $white;
+}
 
 table.mini td {
   padding-right: line-height-times(1);
@@ -192,6 +194,7 @@ table.mini, table#configs {
 
 table.list, table.data {
   border-collapse: collapse;
+  border-color: transparent;
   margin-bottom: 0;
   margin-top: 0;
   width: 100%;
@@ -286,4 +289,11 @@ td.thhead h3 {
 
 table.list.list-checkmarks tr th {
   word-break: break-word;
+}
+
+// IE 11 hack
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  #results_list {
+    @include white-box-shadow;
+  }
 }
